--- a/make.conf
+++ b/make.conf
@@ -24,7 +24,7 @@ DARKELF_FEATURES="postmerge_distclean"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-USE="acl alsa alsa-plugins amd64 audit avahi -bluetooth branding bzip2 cacert cairo caps cet cli colord crypt cryptsetup cups cups-filters dbus dri elogind exif ffmpeg fontconfig fonts fortran gdbm gif glib gnome-keyring gobject-introspection gtk hardened iconv initramfs icu java jpeg jpeg2k libarchive libglvnd libnotify libtirpc libav minimal mp3 multilib networkmanager ncurses nls opus pam peer_perms pie policykit pulseaudio readline sasl seccomp securetty selinux session sdl sha512 split-usr ssl ssp syslog threads tiff truetype ubac udev udisks unconfined unicode upower verify-sig vim-syntax v4l vulkan webp wifi X xattr xcomposite xinerama xorg zlib -auth-dns -bindist -debug -doc -examples -gnome -gnome-online-accounts -google -ios -ipv6 -kde -mercurial -nautilus -plasma -ppp -samba -subversion -systemd -telemetry -test -wayland -smartcard -modemmanager lvm png iptables openssl -gtk-doc conntrack"
+USE="acl alsa alsa-plugins amd64 audit avahi -bluetooth branding bzip2 cacert cairo caps cet cli colord crypt cryptsetup cups cups-filters dbus dri elogind exif ffmpeg fontconfig fonts fortran gdbm gif glib gnome-keyring gobject-introspection gtk hardened iconv initramfs icu java jpeg jpeg2k libarchive libglvnd libnotify libtirpc libav mp3 multilib networkmanager ncurses nls opus pam peer_perms pie policykit pulseaudio readline sasl seccomp securetty selinux session sdl sha512 split-usr ssl ssp syslog threads tiff truetype ubac udev udisks unconfined unicode upower verify-sig vim-syntax v4l webp wifi X xattr xcomposite xinerama xorg zlib -auth-dns -bindist -debug -doc -examples -gnome -gnome-online-accounts -google -ios -ipv6 -kde -mercurial -nautilus -plasma -ppp -samba -subversion -systemd -telemetry -test -wayland -smartcard -modemmanager lvm png iptables openssl -gtk-doc conntrack harfbuzz fontforge svg corefonts"
 
 POLICY_TYPES="targeted strict"
 VIDEO_CARDS="nvidia"
@@ -36,5 +36,5 @@ PYTHON_TARGETS="python3_12 python3_11 python3_10"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_LICENSE="-* @FREE"
 GENTOO_MIRRORS="http://mirrors.rit.edu/gentoo/ \
-    http://www.gtlib.gatech.edu/pub/gentoo \
-    http://mirror.leaseweb.com/gentoo/"
+    http://mirrors.aliyun.com/gentoo/ \
+    http://mirrors.mit.edu/gentoo-distfiles/"
